# pondok-tracker

./: .gitignore  BUILD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  main.rs  storage.rs  tracker.rs  tray.rs
src/pages/: ActivationPage.tsx  TrackingPage.tsx
